--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,7 @@
     <title>Battle Boats</title>
   </head>
   <body>
-    <div id="app"></div>
+    <section id="app"></section>
 <script src="index.js"></script>
   </body>
 </html>
